--- a/about.html
+++ b/about.html
@@ -50,27 +50,26 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="weather.html">Weather Data</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-
+    <br><br><br><br><br> <br><br><br> <br><br>
     <main>
         <section class="about-info">
             <h2>Assignment on API (Country Data)</h2>
-            <p><strong>Name:</strong> S.M. Arif Mahmud</p>
-            <p><strong>ID:</strong> 1830398</p>
-            <p><strong>Course Title:</strong> Web Applications and Internet</p>
-            <p><strong>Course:</strong> MIS455</p>
-            <p><strong>Section:</strong> 01</p>
-            <p><strong>Mail:</strong> <a href="mailto:1830398@iub.edu.bd">1830398@iub.edu.bd</a></p>
-            <p><strong>Github:</strong> <a href="https://github.com/Arif9911">https://github.com/Arif9911</a></p>
+            <p><strong>The Country Data App is a powerful tool designed to provide comprehensive information about countries worldwide. With an intuitive interface and seamless user experience, this application allows users to effortlessly access a wealth of data about any country they desire.
+             <br><br>   
+            Using the latest APIs and cutting-edge technology, the Country Data App retrieves up-to-date information on various aspects of each country, including population, capital, flag, and more. Whether you're a student conducting research, a traveler planning your next adventure, or simply curious about the world around you, this app is your ultimate companion for exploring the diverse and fascinating countries of our planet.
+            </strong> </p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 S.M. Arif Mahmud</p>
+        <label>&copy; 2024 Country Data App</label> <br>
+        <label>Designed & Developed by S.M. Arif Mahmud ID: 1830398</label>
     </footer>
 </body>
 </html>
