--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,12 +50,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="weather.html">Weather Data</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-
+    <br><br><br><br><br> <br><br><br> <br><br>
     <main>
         <section class="about-info">
             <h2>Assignment on API (Country Data)</h2>
@@ -70,7 +71,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 S.M. Arif Mahmud</p>
+        <label>&copy; 2024 Country Data App</label> <br>
+        <label>Designed & Developed by S.M. Arif Mahmud ID: 1830398</label>
     </footer>
 </body>
 </html>
